--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -1,16 +1,16 @@
 {
-  "compilerOptions": {
-    "jsx": "preserve",
+	"compilerOptions": {
+		"jsx": "preserve",
 
-    "module": "node16",
-    "moduleResolution": "node16",
+		"module": "node16",
+		"moduleResolution": "node16",
 
-    "strict": true,
-    "isolatedModules": true,
-    "verbatimModuleSyntax": true,
+		"strict": true,
+		"isolatedModules": true,
+		"verbatimModuleSyntax": true,
 
-    "esModuleInterop": true,
-    "skipLibCheck": true,
-  },
-  "exclude": ["dist/"],
+		"esModuleInterop": true,
+		"skipLibCheck": true
+	},
+	"exclude": ["dist/"]
 }
