--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
 		"preview": "rspeedy preview"
 	},
 	"dependencies": {
+		"@aztec/bb.js": "^0.82.0",
 		"@lynx-js/react": "^0.105.2",
+		"@noir-lang/noir_js": "^1.0.0-beta.3",
 		"react-router": "6"
 	},
 	"devDependencies": {
@@ -19,6 +21,7 @@
 		"@lynx-js/react-rsbuild-plugin": "^0.9.2",
 		"@lynx-js/rspeedy": "^0.8.4",
 		"@lynx-js/types": "^3.2.0",
+		"@rsbuild/plugin-node-polyfill": "^1.3.0",
 		"@types/react": "^18.3.18",
 		"prettier": "^3.5.2",
 		"typescript": "~5.7.3"
