--- a/frontend-web/package.json
+++ b/frontend-web/package.json
@@ -9,6 +9,8 @@
     "preview": "rsbuild preview"
   },
   "dependencies": {
+    "@lynx-js/web-core": "^0.9.0",
+    "@lynx-js/web-elements": "^0.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
