--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@lynx-js/react": "^0.105.2",
+		"font-proxima-nova": "^1.0.1",
 		"react-router": "6"
 	},
 	"devDependencies": {
